coderqi - fixed button on search page, wrapping on browse page, and form input widths on home page / big home link

--- a/coderqi/css/index_style.css
+++ b/coderqi/css/index_style.css
@@ -25,13 +25,15 @@ header {
 	}
 		.search div {
 			display: inline-block;
-			width: 200px;
+			max-width: 200px;
 		}
+			.search div input {
+				width: 100%;
+			}
 		.search button {
 			position: absolute;
 			bottom: 0;
 			margin: 10px;
-			width: 50px;
 		}
 	.main p {
 		text-align: center;
